--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 999;
+    z-index: 900;
 }
 
 .music-player {
@@ -604,13 +604,61 @@ p {
         display: block;
     }
 
+    .hamburger-links {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 80%;
+        height: 100vh;
+        background-color: var(--alt-dark);
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        transform: translateX(-100%);
+        transition: all 0.3s ease-in-out;
+        z-index: 1000;
+    }
+
+    .hamburger.open .hamburger-links {
+        transform: translateX(0);
+    }
+
+    .hamburger-links a {
+        display: flex;
+        /* align-items: center; */
+        font-size: 1rem;
+        font-weight: 500;
+        color: var(--clr-white);
+        text-transform: capitalize;
+        margin-bottom: 2.5rem;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .hamburger-links-list {
+        padding: 4em 3em;
+    }
+
+    .hamburger-links-list-item {
+        margin-bottom: 1rem;
+    }
+
+    .hamburger-links-list-item img {
+        margin-right: 1rem;
+    }
+
     .search-container {
         margin-left: 0rem;
+    }
+
+    .search-container input {
+        display: none;
     }
 
     .search-container i {
         margin-right: .3rem;
         margin-left: 2rem;
+        position: absolute;
+        right: 8%;
     }
 
     .playlist-cover-artist {
@@ -664,7 +712,6 @@ p {
 
     .top-charts-bars .album {
         min-width: 15rem;
-        /* margin-right: 1rem; */
     }
 
     .top-charts .details {
@@ -697,10 +744,6 @@ p {
     }
 
     .music-player .details {
-        /* display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; */
         display: none;
     }
 
@@ -712,15 +755,28 @@ p {
         font-size: 10px;
     }
 
-    .player .details .track-art {
-        /* display: none; */
-    }
-
     .seek-container .seek-slider {
         width: 14rem;
     }
 
     .volume-container {
         display: none;
+    }
+
+    /* hamburger links fade */
+    .fade {
+        animation: fade-in .5s ease-in-out forwards;
+    }
+
+    @keyframes fade-in {
+        0% {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        100% {
+            opacity: 1;
+            visibility: visible;
+        }
     }
 }
