--- a/styles.css
+++ b/styles.css
@@ -757,7 +757,12 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(29, 33, 35, 0.70);
+        background: #0F2027;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(6.1px);
         -webkit-backdrop-filter: blur(6.1px);
